add win structure

--- a/template/home.html
+++ b/template/home.html
@@ -20,4 +20,5 @@
 			<input type="button" class="btn btn-reverse" value="เล่นด่านแรกใหม่" ng-click="replay()" />
 		</div>
 	</form>
+	<button ng-click="test()">Test</button>
 </section>
