--- a/template/win.html
+++ b/template/win.html
@@ -1,4 +1,4 @@
 <section ng-controller="WinCtrl" class="container">
 	เย้เย ยินดีด้วยคุณได้ชนะเกมนี้แล้ว โดยเล่นทั้งหมด {{countLevel}} ด่าน กับมาเล่นอีกทีตอนเราคิดมุกใหม่ได้นะจ๊ะ
-
+	{{test}}
 </section>
