--- a/template/win.html
+++ b/template/win.html
@@ -1,6 +1,6 @@
 <section ng-controller="WinCtrl" class="container">
 	<header style="text-align:center">
-		<h1>ทายคำ</h1>
+		<h1 class="logo"><span class="brand">ทายคำ</span><span class="level"> หมดและ</span></h1>
 	</header>
 	<div class="imageContainer">
 		<div class="guess image">
@@ -12,6 +12,6 @@
 		เย้เย ยินดีด้วยคุณได้ชนะเกมนี้แล้ว โดยเล่นทั้งหมด {{countLevel}} ด่าน กับมาเล่นอีกทีตอนเราคิดมุกใหม่ได้นะจ๊ะ
 	</div>
 	<div style="text-align:center">
-		<input type="button" class="btn btn-info" value="เล่นด่านแรกใหม่" ng-click="replay()" />
+		<a class="btn btn-info"  href="/#/1" >เล่นด่านแรกใหม่</a>
 	</div>
 </section>
