--- a/template/share.html
+++ b/template/share.html
@@ -19,7 +19,7 @@
 				<input type="checkbox" ng-model="question.is_suggest">แนะนำมุขนี้ให้เว็บ taicome.com<br/>
 				<br/>
 				
-				<input type="submit" class="btn" value="สร้างมุก"/>
+				<input type="submit" class="btn" value="สร้างมุข"/>
 
 			</form>
 		</div>
