change to button

--- a/template/share-view.html
+++ b/template/share-view.html
@@ -1,7 +1,7 @@
 <section class="container main" id="{{section_id}}">
 	<aside class="control">
 		<a href="#/share/create" class="{{isShowBack()}} share btn btn-inverse">ส่งมุขกลับ</a>
-		<a href="#/random" class="{{isShowBack()}} random  btn btn-inverse">สุ่มมุขใหม่</a>
+		<button class="{{isShowBack()}} random  btn btn-inverse" ng-click="random()">สุ่มมุขใหม่</button>
 	</aside>
 	<header style="text-align:center;">
 
