Add Picture Helper Module

--- a/template/home.html
+++ b/template/home.html
@@ -25,6 +25,10 @@
 			<a href="#shareModal" role="button" class="btn btn-primary" data-toggle="modal">แชร์</a>
 			<input type="button" class="btn btn-danger" value="ใบ้หน่อย" ng-click="getHint()">
 		</div>
+		<div class="social-answer" style="text-align:center;padding-top:10px">
+			<fbLike class="fb-like" data-href="{{url}}" data-width="80" data-layout="box_count" data-show-faces="true" data-send="false"></fbLike>
+		</div>
+
 	</form>
 	
 	
